@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  divmixed.s
 ;
-;  Copyright (C) 2010, Philipp Klaus Krause
+;  Copyright (C) 2010-2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -29,30 +29,23 @@
 .globl	__divsuchar
 .globl	__divuschar
 
-__divsuchar:
-	ld	hl, #2+1
-	add	hl, sp
-
-	ld	e, (hl)
-	dec	hl
-	ld	l, (hl)
-	ld	h, #0
-
-	jp	__div_signexte
-
 __divuschar:
-	ld	hl, #2+1
-	ld	d, h
-	add	hl, sp
+	; Zero-extend
+	ld	e, l
+	ld	d, #0
 
-	ld	e, (hl)
-	dec	hl
-	ld	l, (hl)
-
-	ld 	a, l	; Sign extend
+	; Sign-extend
+	ld	l, a
 	rlca
 	sbc	a, a
 	ld	h, a
 
 	jp	__div16
+
+__divsuchar:
+	ld	e, l
+	ld	l, a
+	ld	h, #0
+
+	jp	__div_signexte
 
