@@ -1,7 +1,8 @@
 ;--------------------------------------------------------------------------
-;  mulchar.s
+;  mul.s
 ;
 ;  Copyright (C) 2000, Michael Hope
+;  Copyright (C) 2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -31,19 +32,8 @@
 .globl	__mulint
 
 __mulint:
-        pop     af
-        pop     hl
-        pop     de
-        push    de
-        push    hl
-        push    af
-
-        ;; Fall through
-
-	;; Parameters:
-	;;	hl, de (left, right irrelevant)
-	ld	b,h
-	ld	c,l
+        ld	c, l
+        ld	b, h
 
 	;; 16-bit multiplication
 	;;
@@ -52,7 +42,7 @@ __mulint:
 	;; de = multiplier
 	;;
 	;; Exit conditions
-	;; hl = less significant word of product
+	;; de = less significant word of product
 	;;
 	;; Register used: AF,BC,DE,HL
 __mul16::
