@@ -1,7 +1,7 @@
 ;--------------------------------------------------------------------------
 ;  mulchar.s
 ;
-;  Copyright (c) 2017-2020, Philipp Klaus Krause
+;  Copyright (c) 2017-2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
 ;  under the terms of the GNU General Public License as published by the
@@ -36,33 +36,23 @@
 
 ; operands have different sign
 
-__mulsuchar:
-        ld      hl,#2+1
-        ld      b, h
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      c,(hl)
-        jr      signexte
-
 __muluschar:
-        ld      hl,#2
-        ld      b, h
-        add     hl,sp
+	ld	c, l
+	ld	b, #0
+	ld	e, a
 
-        ld      e,(hl)
-        inc     hl
-        ld      c,(hl)
-        jr      signexte
+	jr	signexte
+
+__mulsuchar:
+	ld	c, a
+	ld	b, #0
+	ld	e, l
+
+	jr	signexte
 
 __mulschar:
-        ld      hl,#2+1
-        add     hl,sp
-
-        ld      e,(hl)
-        dec     hl
-        ld      c,(hl)
+	ld	c, a
+	ld	e, l
 
         ;; Need to sign extend before going in.
         ld      a,c
